[package]
name = "meet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
futures = "0.1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.28.0"
bit-vec = "0.6"
rand = "0.8"
base64 = "0.13.1"